--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
             <div class="team boxed-grey">
               <div class="inner">
                 <h5>[予定] 日程</h5>
-                <p class="subtitle">2017年8月10日</p>
+                <p class="subtitle">2017年8月中もしくは9月上旬</p>
                 <h5>[予定] 場所</h5>
-                <p class="subtitle">東公園、〒812-0045 福岡県福岡市博多区東公園７</p>
+                <p class="subtitle">福岡市内のどこかの公園</p>
                 <div class="avatar">
                   当日は夕方ぐらいに東公園集合予定、詳細はツイッターなどを参考
                 </div>
@@ -130,18 +130,25 @@
                 <p class="subtitle">第一部: スボ手牡丹</p>
                 <div class="avatar">
                   西の線香花火、スボ手牡丹を品評します。300年前から変わらない線香花火の原型です
+                  <br>メーカー: 筒井時正玩具花火製造所
+                  <br>web: <a href="http://tsutsuitokimasa.jp" target="_blank">http://tsutsuitokimasa.jp</a>
                 </div>
                 <p class="subtitle">第二部: 長手牡丹</p>
                 <div class="avatar">
                   東の線香花火、長手牡丹を品評します。昔懐かしい線香花火です
+                  <br>メーカー: 筒井時正玩具花火製造所
+                  <br>web: <a href="http://tsutsuitokimasa.jp" target="_blank">http://tsutsuitokimasa.jp</a>
                 </div>
                 <p class="subtitle">第三部: 大江戸牡丹</p>
                 <div class="avatar">
                   三河伝承、大江戸牡丹を品評します。伝統の三河産です
+                  <br>メーカー: 三州火工
                 </div>
                 <p class="subtitle">第四部: 巧</p>
                 <div class="avatar">
                   純国産手作り仕上げ、巧を品評します。日本人の器用さがうかがえるこよりの花火です
+                  <br>メーカー: 筒井時正玩具花火製造所
+                  <br>web: <a href="http://tsutsuitokimasa.jp" target="_blank">http://tsutsuitokimasa.jp</a>
                 </div>
               </div>
             </div>
@@ -152,20 +159,18 @@
             <div class="team boxed-grey">
               <div class="inner">
                 <h5>Becom Presence</h5>
-                <p class="subtitle">Pixel Crafter</p>
+                <p class="subtitle">ハッシュタグ
+                  <br>#線香花火大会
+                  <br>#sparkler
+                  <br>http://sparkler.site</p>
                 <div class="avatar">
-                  <a class="twitter-timeline" href="https://twitter.com/search?q=hackerz_hkt" data-widget-id="744889308679544832">hackerz_hktに関するツイート</a>
+                  <a class="twitter-timeline" href="https://twitter.com/search?q=%23%E7%B7%9A%E9%A6%99%E8%8A%B1%E7%81%AB%E5%A4%A7%E4%BC%9A%20OR%20%23sparkler%20OR%20http%3A%2F%2Fsparkler.site" data-widget-id="889294810888060928">#線香花火大会 OR #sparkler OR http://sparkler.siteに関するツイート</a>
                   <script>
-                  ! function(d, s, id) {
-                    var js, fjs = d.getElementsByTagName(s)[0],
-                      p = /^http:/.test(d.location) ? 'http' : 'https';
-                    if (!d.getElementById(id)) {
-                      js = d.createElement(s);
+                  ! function(d, s, id) { var js, fjs = d.getElementsByTagName(s)[0],
+                      p = /^http:/.test(d.location) ? 'http' : 'https'; if (!d.getElementById(id)) { js = d.createElement(s);
                       js.id = id;
                       js.src = p + "://platform.twitter.com/widgets.js";
-                      fjs.parentNode.insertBefore(js, fjs);
-                    }
-                  }(document, "script", "twitter-wjs");
+                      fjs.parentNode.insertBefore(js, fjs); } }(document, "script", "twitter-wjs");
                   </script>
                 </div>
               </div>
