--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <div class="team boxed-grey">
               <div class="inner">
                 <h5>[予定] 日程</h5>
-                <p class="subtitle">2017年8月中もしくは9月上旬</p>
+                <p class="subtitle">2017年9月3日(日)夕方ごろ</p>
                 <h5>[予定] 場所</h5>
                 <p class="subtitle">福岡市内のどこかの公園</p>
                 <div class="avatar">
