--- a/index.html
+++ b/index.html
@@ -91,14 +91,14 @@
           <div class="wow bounceInUp" data-wow-delay="0.2s">
             <div class="team boxed-grey">
               <div class="inner">
-                <h5>[予定] 日程</h5>
+                <h5>日程</h5>
                 <p class="subtitle">2017年9月3日(日)夕方ごろ</p>
                 <h5>[予定] 場所</h5>
-                <p class="subtitle">福岡市内のどこかの公園</p>
+                <p class="subtitle">福岡市内、博多駅ちかく、おそらく人参公園</p>
                 <div class="avatar">
                   当日は夕方ぐらいに東公園集合予定、詳細はツイッターなどを参考
                 </div>
-                <h5>[予定] 人数</h5>
+                <h5>人数</h5>
                 <p class="subtitle">5名から10名程度</p>
               </div>
             </div>
