--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <div class="team boxed-grey">
               <div class="inner">
                 <h5>日程</h5>
-                <p class="subtitle">2017年9月3日(日)夕方ごろ</p>
+                <p class="subtitle">2017年9月3日(日)夕方ごろ(終了しました)</p>
                 <h5>[予定] 場所</h5>
                 <p class="subtitle">福岡市内、博多駅ちかく、おそらく人参公園</p>
                 <div class="avatar">
